crates/cribo/tests/snapshots/execution_results@conditional_named_expression_bindings.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_named_expression_bindings/main.py
---
ExecutionResults {
    status: Success,
    stdout: "if\ndefault default\nTrue\ndecorated\ncontext\n0 ['with-target']\nguard\n0 ['for-target']\ncomprehension ['comprehension']\nFalse",
    stderr: "",
}
