crates/cribo/tests/snapshots/execution_results@conditional_partial_target_effects.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_partial_target_effects/main.py
---
ExecutionResults {
    status: Success,
    stdout: "assigned\nTrue\nFalse\nTrue",
    stderr: "",
}
