crates/cribo/tests/snapshots/execution_results@conditional_with_partial_binding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/conditional_with_partial_binding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "with",
    stderr: "",
}
