crates/cribo/tests/snapshots/execution_results@dunder_lambda_shadow.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/dunder_lambda_shadow/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider ready\nworker loaded from provider\nlambda: argument\nmodule: provider",
    stderr: "",
}
