crates/cribo/tests/snapshots/execution_results@dunder_package_values.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/dunder_package_values/main.py
---
ExecutionResults {
    status: Success,
    stdout: "toplevel_helper __package__: ''\nprovider package __package__: provider\nworker __package__: provider\ninit saw: provider\nworker sees: provider",
    stderr: "",
}
