crates/cribo/tests/snapshots/execution_results@dunder_shadowed_import_globals.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/dunder_shadowed_import_globals/main.py
---
ExecutionResults {
    status: Success,
    stdout: "provider ready\nworker loaded from provider\nparam: argument\nlocal: local\nmodule: provider",
    stderr: "",
}
