crates/cribo/tests/snapshots/execution_results@for_target_shadows_importlib.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/for_target_shadows_importlib/main.py
---
ExecutionResults {
    status: Success,
    stdout: "bundled helper",
    stderr: "",
}
