crates/cribo/tests/snapshots/execution_results@importlib_comprehension_first_iterable.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_comprehension_first_iterable/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper loaded\nvalue: helper reached through first iterable",
    stderr: "",
}
