crates/cribo/tests/snapshots/execution_results@importlib_conditional_rebinding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_conditional_rebinding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "helper loaded\nVALUE: conditionally reachable helper",
    stderr: "",
}
