crates/cribo/tests/snapshots/execution_results@importlib_def_rebinding.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_def_rebinding/main.py
---
ExecutionResults {
    status: Success,
    stdout: "AttributeError preserved",
    stderr: "",
}
