crates/cribo/tests/snapshots/execution_results@importlib_deleted_alias.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/importlib_deleted_alias/main.py
---
ExecutionResults {
    status: Success,
    stdout: "NameError preserved",
    stderr: "",
}
